<resources>
    <string name="app_name">My AppTODOIN</string>
    <string name="monumentos">monumentos</string>
    <string name="caminatas">caminatas</string>
    <string name="tours">tours</string>
    <string name="camping">camping</string>
    <string name="inicio">inicio</string>
    <string name="button">Button</string>
    <string name="button1">Button</string>
    <string name="button2">Button</string>
    <string name="button3">Button</string>
    <string name="button4">Button</string>
    <string name="button5">Button</string>
    <string name="button6">Button</string>
    <string name="bogota">bogota</string>
    <string name="popayan">popayan</string>
    <string name="quienes_somos">quienes somos</string>
    <string name="ingresar">ingresar</string>
    <string name="registrarse">registrarse</string>
    <string name="villavicencio">villavicencio</string>
    <string name="salir">salir</string>
    <string name="atr_s">atrás</string>
    <string name="atr_s1">atrás</string>
    <string name="atr_s2">atrás</string>
    <string name="inicio1">inicio</string>
    <string name="planea_y_disfruta_aqu1">Planea y disfruta Aquí</string>
    <string name="villavo">villavo</string>
    <string name="inicio2">inicio</string>
    <string name="planea_y_disfruta_aqu">Planea y Disfruta Aquí</string>
    <string name="todo">TODO</string>
    <string name="camping_cerca_de_villavicencio_aqu_encontrar_s_diferentes_opciones_para_hacer_ecoturismo_a_los_alrededores_de_la_ciudad_los_precios_son_por_lo_general_por_persona_noche_y_dependen_del_tipo_de_servicio_seleccionado_y_lo_que_incluya">CAMPING CERCA DE VILLAVICENCIO Aquí encontrarás diferentes opciones para hacer ecoturismo a los alrededores de la ciudad. Los precios son, por lo general, por persona/noche y dependen del tipo de servicio seleccionado y lo que incluya.</string>
    <string name="todo1">TODO</string>
    <string name="villavo1">VILLAVO</string>
    <string name="si_lo_que_buscas_es_una_opci_n_a_costo_quot_casi_cero_quot">Si lo que buscas es una opción a costo \"casi cero\":</string>
    <string name="camping_villavo">CAMPING VILLAVO</string>
    <string name="utop_a_est_ubicado_por_la_v_a_puerto_l_pez_km_15_vereda_la_reforma_un_glamping_que_deleita_con_sus_paisajes_lindos_atardeceres_y_gastronom_a_cuenta_con_una_zona_equipada_de_lujos_internos_y_externos_que_permiten_al_hu_sped_vivir_una_experiencia_inigualable_entre_la_autenticidad_de_la_zona_y_lo_adaptado_all_para_los_hospedajes_los_precios_por_noche_oscilan_desde_250_000_hasta_400_000_confirmar_precio_y_disponibilidad_3208832814">Utopía, está ubicado por la vía Puerto López km 15 Vereda la Reforma. Un glamping que deleita con sus paisajes, lindos atardeceres y gastronomía. Cuenta con una zona equipada de lujos internos y externos, que permiten al huésped vivir una experiencia inigualable entre la autenticidad de la zona y lo adaptado allí para los hospedajes. Los precios por noche oscilan desde $250.000 hasta $400.000. Confirmar precio y disponibilidad 3208832814.</string>
    <string name="waira_eco_lodge_es_un_alojamiento_rodeado_de_vegetaci_n_que_permite_a_los_turistas_conectar_el_ecosistema_propio_de_la_regi_n_ofreciendo_a_sus_hu_spedes_una_atenci_n_de_lujo_para_disfrutar_de_platos_a_la_carta_piscina_privada_conexi_n_wifi_desayuno_parqueadero_jacuzzi_malla_colgante_ba_o_natural_y_ba_o_privado_fuera_del_glamping_los_precios_por_noche_oscilan_desde_200_000_hasta_400_000_confirmar_precio_y_disponibilidad_3219690620">Waira Eco Lodge, es un alojamiento rodeado de vegetación que permite a los turistas conectar el ecosistema propio de la región. Ofreciendo a sus huéspedes una atención de lujo para disfrutar de platos a la carta, piscina privada, conexión wifi, desayuno, parqueadero, jacuzzi, malla colgante, baño natural y baño privado fuera del glamping. Los precios por noche oscilan desde $200.000 hasta $400.000. Confirmar precio y disponibilidad 3219690620.</string>
    <string name="Usuario">Usuario</string>
    <string name="Contrasena">Contrasena</string>
    <string name="atras">Atrás</string>
    <string name="title_activity_google_maps">GoogleMaps</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>