<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/todoininicio"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnvillavo"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="284dp"
        android:backgroundTint="#29668b"
        android:fontFamily="@font/balsamiq_sans"
        android:text="@string/villavicencio"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/btnbogota"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnbogota"
        android:layout_width="95dp"
        android:layout_height="45dp"
        android:layout_marginTop="284dp"
        android:backgroundTint="#29668b"
        android:fontFamily="@font/balsamiq_sans"
        android:text="@string/bogota"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/btnpopayan"
        android:layout_width="102dp"
        android:layout_height="45dp"
        android:layout_marginTop="284dp"
        android:backgroundTint="#29668b"
        android:fontFamily="@font/balsamiq_sans"
        android:text="@string/popayan"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnsomos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="#29668b"
        android:fontFamily="@font/balsamiq_sans"
        android:text="@string/quienes_somos"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/btningresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="484dp"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="#29668b"
        android:fontFamily="@font/balsamiq_sans"
        android:text="@string/ingresar"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
         />

    <Button
        android:id="@+id/btnregistrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="544dp"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="#29668b"
        android:fontFamily="@font/balsamiq_sans"
        android:text="@string/registrarse"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
       />

    <Button
        android:id="@+id/btnsalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="604dp"
        android:backgroundTint="#29668b"
        android:fontFamily="@font/balsamiq_sans"
        android:text="@string/salir"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>