<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/camping_villavo"
    tools:context=".CampingVillavo">

    <Button
        android:id="@+id/planeaydisfrutaaqui10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="275dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="243dp"
        android:backgroundTint="#29668b"
        android:fontFamily="@font/balsamiq_sans"
        android:insetRight="16dp"
        android:text="@string/planea_y_disfruta_aqu"
        android:textAllCaps="false"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.672"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <Button
        android:id="@+id/planeaydisfrutaaqui11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="275dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="#29668b"
        android:fontFamily="@font/balsamiq_sans"
        android:insetRight="16dp"
        android:text="Planea y Disfruta Aquí"
        android:textAllCaps="false"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.581"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/planeaydisfrutaaqui12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="270dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#29668b"
        android:fontFamily="@font/balsamiq_sans"
        android:text="Planea y Disfruta Aquí"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/villavo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#29668b"
        android:fontFamily="@font/balsamiq_sans"
        android:insetRight="8dp"
        android:text="@string/villavo1"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/planeaydisfrutainfo3"
        android:layout_width="408dp"
        android:layout_height="101dp"
        android:layout_marginBottom="5dp"
        android:background="#F0F87F"
        android:fontFamily="@font/balsamiq_sans"
        android:text="\n\n                                    Si lo que buscas es una opción a costo &quot;casi cero&quot;:"
        android:textColor="#090808"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/campingvillavo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/balsamiq_sans_bold"
        android:text="@string/camping_villavo"
        android:textColor="#29668B"
        android:textSize="28sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285" />

    <com.codesgood.views.JustifiedTextView
        android:id="@+id/utopiainfo"
        android:layout_width="280dp"
        android:layout_height="100dp"
        android:layout_marginStart="265dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="140dp"
        android:background="#FBFBFB"
        android:fontFamily="@font/balsamiq_sans"
        android:text="@string/utop_a_est_ubicado_por_la_v_a_puerto_l_pez_km_15_vereda_la_reforma_un_glamping_que_deleita_con_sus_paisajes_lindos_atardeceres_y_gastronom_a_cuenta_con_una_zona_equipada_de_lujos_internos_y_externos_que_permiten_al_hu_sped_vivir_una_experiencia_inigualable_entre_la_autenticidad_de_la_zona_y_lo_adaptado_all_para_los_hospedajes_los_precios_por_noche_oscilan_desde_250_000_hasta_400_000_confirmar_precio_y_disponibilidad_3208832814"
        android:textColor="#090808"
        android:textColorHint="#1A090909"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.813"
        app:layout_constraintStart_toStartOf="parent" />

    <com.codesgood.views.JustifiedTextView
        android:id="@+id/wairainfo"
        android:layout_width="280dp"
        android:layout_height="110dp"
        android:layout_marginStart="255dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="275dp"
        android:background="#FBFBFB"
        android:fontFamily="@font/balsamiq_sans"
        android:text="@string/waira_eco_lodge_es_un_alojamiento_rodeado_de_vegetaci_n_que_permite_a_los_turistas_conectar_el_ecosistema_propio_de_la_regi_n_ofreciendo_a_sus_hu_spedes_una_atenci_n_de_lujo_para_disfrutar_de_platos_a_la_carta_piscina_privada_conexi_n_wifi_desayuno_parqueadero_jacuzzi_malla_colgante_ba_o_natural_y_ba_o_privado_fuera_del_glamping_los_precios_por_noche_oscilan_desde_200_000_hasta_400_000_confirmar_precio_y_disponibilidad_3219690620"
        android:textColor="#090808"
        android:textColorHint="#1A090909"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/wairafoto"
        android:layout_width="107dp"
        android:layout_height="79dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="288dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/campingwaira" />

    <ImageView
        android:id="@+id/utopiafoto"
        android:layout_width="104dp"
        android:layout_height="68dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="153dp"
        android:contentDescription="@string/todo1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/utopiacamping" />

    <com.codesgood.views.JustifiedTextView
        android:id="@+id/infocampingvillavo"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginBottom="416dp"
        android:background="#F0F87F"
        android:fontFamily="@font/balsamiq_sans"
        android:text="@string/camping_cerca_de_villavicencio_aqu_encontrar_s_diferentes_opciones_para_hacer_ecoturismo_a_los_alrededores_de_la_ciudad_los_precios_son_por_lo_general_por_persona_noche_y_dependen_del_tipo_de_servicio_seleccionado_y_lo_que_incluya"
        android:textColor="#090808"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="150dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoapp" />

</androidx.constraintlayout.widget.ConstraintLayout>

